# chessGame

./: .gitignore  CMakeLists.txt  README.md
content/: source.txt
include/: config.h.in
src/: Moves.cpp  Moves.h  Piece.cpp  Piece.h  main.cpp
